Small modification to the page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Coursera Test</title>
 </head>
-<body>
+<body><br><br><br><br><p>       </p>
 	<h1>Coursera  HTML course</h1>
 </body>
 </html>
