WT assignment materials final

--- a/index2.html
+++ b/index2.html
@@ -1,62 +1,83 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.parallax {
-  /* The image used */
-  background-image: url("Narendra-Modi-Abdul-Kalam-696x392.jpg");
+	<meta charset="utf-8">
+	<title>My first Website</title>
+	<style>
+		a:link, a:visited{
+			color:black;
+		}
 
-  /* Set a specific height */
-  position: relative;
-  opacity: 0.65;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  /* Create the parallax scrolling effect */
-  
-}
-
-
-</style>
+		a:hover, a:active{
+			background-color:#8ceb73;
+			color:red;
+		}</style>
 </head>
-<body>
+<body bgcolor="#eef5b8">
+	<marquee style="color: blue">!!!!!!! WELCOME TO MY WEBSITE !!!!!!!!</marquee>
+	
+	<h1 style="text-align:center" id="top">Srinivasan Suresh welcomes you </h1>
+	<img src="Passport size photo.jpg" height="150" width="150" alt="Your photo"><br><br>
 
-<p>Scroll Up and Down this page to see the parallax scrolling effect.</p>
+	<header>
+		<h2>Shorcuts:</h2>
+		<ol>
+			<li><a href="#abtme">About me</a></li>
+			<li><a href="#erl">Early Life</a></li>
+			<li><a href="#edu">Education</a></li>
+			<li><a href="#goal">Career and Goal</a></li>
+			<li><a href="#fav">Favourite things</a></li>
+			<li><a href="#cont">Contact me</a></li>
+		</ol>
+	</header>
 
-<div class="parallax"></div>
-<div class="transbox1">
+			<br><br>
 
-	<div style="height:200px;background-color:red;font-size:24px">
-	Scroll Up and Down this page to see the parallax scrolling effect.
-	This div is just here to enable scrolling.
-	Tip: Try to remove the background-attachment property to remove the scrolling effect.
-	</div>
-</div>
-<br>
-
-<div class="transbox2">
-
-	<div style="height:200px;background-color:red;font-size:24px">
-	Scroll Up and Down this page to see the parallax scrolling effect.
-	This div is just here to enable scrolling.
-	Tip: Try to remove the background-attachment property to remove the scrolling effect.
-	</div>
-</div>
-
-<div class="transbox3">
-
-	<div style="height:200px;background-color:red;font-size:24px">
-	Scroll Up and Down this page to see the parallax scrolling effect.
-	This div is just here to enable scrolling.
-	Tip: Try to remove the background-attachment property to remove the scrolling effect.
-	</div>
-</div>
+	
+	<!--<div id="abtme"> About me</div>-->
+	<section id="abtme">
+		<h3>About me</h3>
+		<article>As it says on the website my name is Srinivasan Suresh.Right now, I am pursuing under-graduation in B.Tech in Sri Sairam Engineering College.To know more about me and my 19 yrs of life till now, follow me through my website. Come on!!!</article></section>
 
 
+	<!--<div id="erl">Early Life</div>-->
+	<section id="erl">     
+		<h3>Early Life</h3>
+		<article>I was born on September 10 in the year 2000 in Salem in Tamil Nadu. Salem is a smal  beautiful city with a very good climate almost throughout the year. My parents are N.Suresh and Sathyabhama Suresh. My father is proficient in five languages and mu=y mother is a home maker. And also, I have a sister whose name is Sushmitha Suresh and she has graduated from Madras Institute of Technology (MIT), Chennai.</article></section>
+
+	<!--<div id="edu">Education</div>-->
+	<section id="edu">
+		<h3>Education</h3>
+		<article>I did my knidergarden and primary schooling in Salem in Sri Sarada Matric Hr. Sec for girls. Then I went to Balamandir Matric Hr.Sec school for my 6th standard. From 7th standard to my end of higher secondary education, I moved to Chennai and did it in NSN Matric Hr.Sec school in Chrompet,Chennai. Presently, I am doing my under graduation in Sri Sairam Engineering College, Chennai.   </article></section>
+
+	<!--<div id="goal">Career and Goal</div>-->
+	<section id="goal">
+		<h3>Career and goal</h3>
+		<article>To learn in-depth the concepts and&nbsp;use-cases&nbsp; of the information technology and try my best to benefit the society with the help of that. Like great legends say "Knowledge is power", I will try to inculcate the essence and the importance of the knowledge gained through education  in the minds of people.</article></section>
+
+	<!--<div id="fav">Favourite things</div>-->
+	<section id="fav">
+		<h3>Favourite things</h3>
+		<article>   
+			<div>Food: Dosai(South-Indian)</div>
+			<div>Cake: Red Velvet flavour</div>
+			<div>Sport: Formula One(motorsport), Cricket</div>
+			<div>Car: Toyota prius</div>
+			<div>Inspiration: Myself</div>
+			<div>University: Stanford and MIT(USA)</div>
+			<div>Actress :Emma Watson(all-time favourite)</div></article></section>
+
+	<!--<div id="cont">Contact me</div>-->
+	<section id="cont">
+		<h3>Contact me</h3>
+		<article>In case you liked my website and fascinated by the above content and want to contact me, feel free to drop a e-mail at srinivasansuresh3@gmail.com </article></section>
+
+	<section>
+		<a href="#top">Back to top</a>
+	</section>
+
+
+
+	<p>This website is subjected to copywright &copy;</p>
 </body>
 </html>
