--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@ body, html {
 
 }
 .bgimg-1 {
-  background-image: url("f1car.jpg");
+  background-image: url("Passport size photo.jpg");
   min-height: 100%;
 }
 
 .bgimg-2 {
-  background-image: url("f1car.jpg");
+  background-image: url("Passport size photo.jpg");
   min-height: 400px;
 }
 
 .bgimg-3 {
-  background-image: url("f1car.jpg");
+  background-image: url("Passport size photo.jpg");
   min-height: 400px;
 }
 
